2002-09-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chord-name.scm (chord::inner-name-banter): remove space.

2002-09-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (connect_beams): don't crash if there are quarter
	notes in beams.

2002-09-24  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: corrected ancient clef
	docu; added docu on ligatures

2002-09-21  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/glossary.tely,
	Documentation/user/refman.itely, input/les-nereides.ly,
	input/mutopia/W.A.Mozart/mozart-hrn3-defs.ly,
	input/test/bagpipe.ly, lily/stem.cc, ly/grace-init.ly,
	scm/grob-property-description.scm, scripts/convert-ly.py: renamed
	Stem properties: flag-style -> stroke-style, style -> flag-style.

2002-09-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-functions.scm (music-separator?): don't use name music
	property.

2002-09-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/new-accidental-engraver.cc: Compile fix.

2002-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py: Add rule.

	* input/test/music-creation.ly:
	* input/test/add-staccato.ly:
	* input/test/add-text-script.ly: ly-make-music.

	* scm/drums.scm (make-head-type-elem, make-articulation-script):
	More ly-make-music renamings.

	* lily/command-request.cc: ADD_MUSIC: arpeggio_req.

	* lily/music-constructor.cc (make_music): Add debugging info.

	* scm/music-functions.scm (make-simultaneous-music,
	(make-sequential-music, context-spec-music):
	* scm/music-types.scm (music-descriptions): Get lily to run.

2002-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/command-request.cc (transpose_key_alist): new function.

	* lily/key-performer.cc (create_audio_elements): cleanup. 

2002-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy: remove TYPED_MAKE_MUSIC().

	* lily/include/translator.hh (ENTER_DESCRIPTION): add
	events-accepted field.

	* scm/music-types.scm: new file.
